# federated-learning-core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: config.yaml
notebooks/: 01-fedavg-from-scratch.ipynb  02-non-iid-partitioning.ipynb  03-flower-training.ipynb  04-compression-techniques.ipynb  05-dp-sgd.ipynb
src/: __init__.py
src/algorithms/: __init__.py  fedadam.py  fedprox.py
src/algorithms/fedavg/: __init__.py  aggregation.py  client.py  server.py
src/core/: __init__.py  config.py  data_loader.py  metrics.py  model.py
src/data/: __init__.py
src/data/partitioning/: __init__.py  analyzer.py  dirichlet.py  iid.py  quantity_skew.py
src/experiments/: run_compression.py  run_cross_silo.py  run_dp.py  run_fedavg.py  run_flower.py  run_personalization.py  run_vertical.py
src/optimization/: __init__.py
src/optimization/compression/: __init__.py  benchmarks.py  error_feedback.py  quantization.py  sparsification.py
src/optimization/personalization/: __init__.py  fine_tuning.py  meta_learning.py  multi_task.py
src/privacy/: __init__.py
src/privacy/dp_sgd/: __init__.py  accounting.py  mechanisms.py  strategies.py
src/scenarios/: __init__.py
src/scenarios/cross_silo/: __init__.py  bank_simulation.py  federation_metrics.py  main_legacy.py  secure_aggregation.py
tests/: test_compression.py  test_cross_silo.py  test_dp.py  test_fedavg.py  test_flower.py  test_partitioning.py  test_personalization.py  test_public_surfaces.py  test_vertical.py
(+20 files in other folders)
