[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-learning-core"
version = "0.1.0"
description = "Unified federated learning training framework split from fl-security-research."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
